Fix seed error message using margins; now properly use text-align center

--- a/app/src/app/pages/seed/seed-page/seed-page.component.scss
+++ b/app/src/app/pages/seed/seed-page/seed-page.component.scss
@@ -119,7 +119,7 @@
     }
 
     p{
-        margin: 2rem 5rem 2rem 5rem;
+        text-align: center;
 
         span {
             color:red;
